scope navbar title alignment fix to drawer

--- a/plugins/chat/assets/stylesheets/common/chat-navbar.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-navbar.scss
@@ -66,7 +66,9 @@
   }
 
   > .c-navbar__title:first-child {
-    margin-left: 1rem;
+    .chat-drawer & {
+      margin-left: 1rem;
+    }
   }
 }
 
